# ifcopenshell-notebooks

./: .gitignore  05_hello_viewer.ipynb  4_link_predict.ipynb  CLOI.ipynb  ElementNet.ipynb  Elements.ipynb  README.md  Registration.ipynb  centerline_relationships.ipynb  element_dataset.ipynb  gaussian.ipynb  graph_experiments.ipynb  link_prediction.ipynb  loss1.ipynb  loss2.ipynb  meta_loss.ipynb  morph-Copy1.ipynb  morph.ipynb  pipe_link_prediction.ipynb  pipelines.ipynb  test.py  train_classification.py  train_meta.py  train_registration.py
config/: pipeline.json
data/: sample.ifc
deprecated/: Elements_basinhopping.ipynb  centerline_relationships-follow.ipynb
pointnet2/: train_classification.py:Zone.Identifier
pointnet2/models/: fcn.py  pointnet2_cls_ssg.py  pointnet2_meta_ssg.py  pointnet_cls.py
ransac/: CMakeLists.txt  ransac.cpp
scripts/: IFCPARSE.py  downsample.py  estimate_gmm_sklearn.py  ifc2obj.py  ifcmerge.py  obj2ifc.py  process_exr.py  render_depth.py  total.py
src/: centerline.py  chamfer.py  cloud.py  completion_vis.py  dataset.py  elements.py  evaluation.py  finetune.py  gaussian_visualization.py  geometry.py  graph.py  icp.py  ifc.py  meta.py  morph.py  pca.py  plots.py  pointnet.py  preparation.py  preperation.py  structure.py  utils.py  visualisation.py
